refactor DockGraphDebugView and DockGraphTest to use List.of and improve readability